--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "home": "https://Purbapratim36.github.io/Cricket-Realm",
+   "homepage": "https://purbapratim36.github.io/CricketRealm"
+
   "name": "cricketrealm",
   "version": "0.1.0",
   "private": true,
