--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-   "homepage": "https://purbapratim36.github.io/CricketRealm"
+   "homepage": "https://purbapratim36.github.io/CricketRealm",
 
   "name": "cricketrealm",
   "version": "0.1.0",
